--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=boiteletre
+# Configuration MariaDB
+spring.datasource.url=jdbc:mariadb://localhost:3306/BoiteALivres
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# Configuration JPA
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=update
+#other values : none, validate, create, create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
