Génération de la base de donnée avec Hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=boiteletre
 # Configuration MariaDB
 spring.datasource.url=jdbc:mariadb://localhost:3306/BoiteALivres
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Configuration JPA
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
