--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=boiteletre
 server.port=2525
 spring.datasource.url=jdbc:mariadb://localhost:3306/bookbox
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Configuration JPA
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
