--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=boiteletre
-server.port=2525
+
 spring.datasource.url=jdbc:mariadb://localhost:3306/bookbox
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Configuration JPA
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 #other values : none, validate, create, create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
