Final version of bookbox backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Configuration JPA
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-spring.jpa.hibernate.ddl-auto=validate
-#other values : none, validate, create, create-drop
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
