--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,13 @@
             <version>1.5.5.Final</version>
         </dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
+    </dependencies>
 
 
 	<build>
